Fix up alignment for IE7
Use floats instead of inline-block to make IE7 play nice with the
design that we need.

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -312,6 +312,7 @@ body.government #global-header .header-context {
   div.wrapper {
     margin: 0 auto;
     max-width: 960px;
+    height: 45px;
     clear: both;
 
     @include ie-lte(6) {
@@ -319,17 +320,30 @@ body.government #global-header .header-context {
     }
 
     h1, p {
-      display: inline-block;
+      float: left;
     }
 
     h1 {
       @include core-19;
 
-      margin-right: 15px;
+      @incude ie-lte(7) {
+        zoom: 1;
+      }
+
+      width: 280px;
+      margin-top: 10px;
     }
 
     p {
       @include core-14;
+
+      margin-left: 15px;
+      margin-top: 14px;
+
+      @include ie-lte(7) {
+        margin-top: 15px;
+        zoom: 1;
+      }
 
       a {
         &:link { color: #fff; }
@@ -344,7 +358,11 @@ body.government #global-header .header-context {
 
       &.right {
         float: right;
-        margin-right: 0;
+        margin-top: 12px;
+
+        @include ie-lte(7) {
+          margin-top: 9px;
+        }
       }
     }
   }
